--- a/deployment/kubernetes/stateful-services/ftgo-kafka-deployment.yml
+++ b/deployment/kubernetes/stateful-services/ftgo-kafka-deployment.yml
@@ -11,7 +11,7 @@ spec:
   selector:
     role: ftgo-kafka
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: ftgo-kafka
@@ -47,4 +47,7 @@ spec:
       resources:
         requests:
           storage: 1Gi
+  selector:
+    matchLabels:
+      role: ftgo-kafka
 ---
