--- a/ftgo-order-history-service/src/deployment/kubernetes/ftgo-order-history-service.yml
+++ b/ftgo-order-history-service/src/deployment/kubernetes/ftgo-order-history-service.yml
@@ -9,7 +9,7 @@ spec:
   selector:
     svc: ftgo-order-history-service
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ftgo-order-history-service
@@ -74,4 +74,8 @@ spec:
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 20
+  selector:
+    matchLabels:
+      svc: ftgo-order-history-service
+      application: ftgo
 ---
