--- a/deployment/kubernetes/stateful-services/ftgo-dynamodb-local.yml
+++ b/deployment/kubernetes/stateful-services/ftgo-dynamodb-local.yml
@@ -9,7 +9,7 @@ spec:
   selector:
     svc: ftgo-dynamodb-local
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: ftgo-dynamodb-local
@@ -47,6 +47,9 @@ spec:
       resources:
         requests:
           storage: 1Gi
+  selector:
+    matchLabels:
+      svc: ftgo-dynamodb-local
 ---
 apiVersion: batch/v1
 kind: Job
