--- a/deployment/kubernetes/stateful-services/ftgo-mysql-deployment.yml
+++ b/deployment/kubernetes/stateful-services/ftgo-mysql-deployment.yml
@@ -12,7 +12,7 @@ spec:
   selector:
     role: ftgo-mysql
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: ftgo-mysql
@@ -51,4 +51,7 @@ spec:
       resources:
         requests:
           storage: 1Gi
+  selector:
+    matchLabels:
+      role: ftgo-mysql
 ---
