--- a/deployment/kubernetes/stateful-services/ftgo-zookeeper-deployment.yml
+++ b/deployment/kubernetes/stateful-services/ftgo-zookeeper-deployment.yml
@@ -12,7 +12,7 @@ spec:
   selector:
     role: ftgo-zookeeper
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: ftgo-zookeeper
@@ -44,4 +44,7 @@ spec:
       resources:
         requests:
           storage: 1Gi
+  selector:
+    matchLabels:
+      role: ftgo-zookeeper
 ---
