--- a/ftgo-api-gateway/src/deployment/kubernetes/ftgo-api-gateway.yml
+++ b/ftgo-api-gateway/src/deployment/kubernetes/ftgo-api-gateway.yml
@@ -16,7 +16,7 @@ spec:
 #  loadBalancerSourceRanges:
 #    - 88.128.82.195/32
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ftgo-api-gateway
@@ -61,5 +61,9 @@ spec:
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 20
+  selector:
+    matchLabels:
+      svc: ftgo-api-gateway
+      application: ftgo
 
 ---
