--- a/ftgo-consumer-service/src/deployment/kubernetes/ftgo-consumer-service.yml
+++ b/ftgo-consumer-service/src/deployment/kubernetes/ftgo-consumer-service.yml
@@ -9,7 +9,7 @@ spec:
   selector:
     svc: ftgo-consumer-service
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ftgo-consumer-service
@@ -62,4 +62,8 @@ spec:
             port: 8080
           initialDelaySeconds: 60
           periodSeconds: 20
+  selector:
+    matchLabels:
+      svc: ftgo-consumer-service
+      application: ftgo
 ---
