--- a/ftgo-restaurant-service/src/deployment/kubernetes/ftgo-restaurant-service.yml
+++ b/ftgo-restaurant-service/src/deployment/kubernetes/ftgo-restaurant-service.yml
@@ -9,7 +9,7 @@ spec:
   selector:
     svc: ftgo-restaurant-service
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ftgo-restaurant-service
@@ -67,4 +67,8 @@ spec:
             port: 8080
           initialDelaySeconds: 60
           periodSeconds: 20
+  selector:
+    matchLabels:
+      svc: ftgo-restaurant-service
+      application: ftgo
 ---
